overview: Fix stacking order for new UI.

New UI bypasses some animations when in tablet mode. Old UI relied on
animation ended to stack windows properly. After this patch lands, the
enable new overview UI patch should be able to reland safely.

Test: ash_unittests WindowSelectorTest.OverviewWidgetStackingOrder
Bug: 821999, 822049
Change-Id: I4028b9c045b0bfc93207d2d0bc6343e634eb6c89
Reviewed-on: https://chromium-review.googlesource.com/963693
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543567}
Former-commit-id: 92d3c1671a7914c2f0e60326e47b8541d7c3f33e